--- a/_includes/speakers-list.html
+++ b/_includes/speakers-list.html
@@ -44,13 +44,12 @@
                                     <p class="position">{{ speaker.company }}</p>
                                 {% endif %}
                             </ul>
-                            <a href="#" class="slider-next-item {% if sessionsNumber < 2 %}hidden{% endif %}">Next</a>
                         </div>
                     </div>
                 </div>
                 {% endfor %}
             </div> 
-            <a href="{{ site.c4pUrl }}" class="btn btn-primary waves-effect waves-button waves-light waves-float" target="_blank">Become a speaker</a>     
+            <a href="{{ site.c4pUrl }}" class="btn btn-primary waves-effect waves-button waves-light waves-float" target="_blank">Buy Tickets</a>     
         </div>
     </div>
 </section>
