Add details of the conference

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -1,4 +1,5 @@
 <!-- Begin Partners Section -->
+<a name="sponsors"></a>
 <section id="partners" class="partners">
     <div class="content-wrapper">
         <div class="col-lg-10 col-lg-offset-1">
