--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -1,7 +1,10 @@
 <!-- Begin Schedule Section -->
 <section id="schedule" class="schedule">
     <div class="content-wrapper">
-        <h5>Schedule will be announced soon.</h5>
+        <h6>17th January - 2019: Workshop</h6>
+        <h6>18th and 19th January - 2019: Conference</h6>
+        <strong>Details will be announced closer to the date. Stay tuned...</strong> <br><br>
+        <a href="https://ti.to/iosconfsg/2019" class="btn btn-primary waves-effect waves-button waves-light waves-float" target="_blank">Buy Tickets</a>
     </div>
 </section>
 <!-- End Schedule Section -->
