--- a/_includes/venue.html
+++ b/_includes/venue.html
@@ -1,4 +1,5 @@
 <!-- Venue Section -->
+<a name="venue"></a>
 <section id="venue">
     <div class="content-wrapper">
         <div class="col-lg-10 col-lg-offset-1">
