--- a/_includes/twitter-feed.html
+++ b/_includes/twitter-feed.html
@@ -6,8 +6,7 @@
             <svg class="icon" viewBox="0 0 30 32">
                 <use xlink:href="{{ site.baseurl }}/img/sprites/sprites.svg#icon-twitter"></use>
             </svg>
-            <h3>{{ site.tweetsFeedTitle }} <a href="https://twitter.com/search?q=%23{{ site.twitterHashTag }}" target="_blank">#{{ site.twitterHashTag }}</a>
-            </h3>
+            <a class="twitter-timeline" data-lang="en" data-height="500" data-dnt="true" data-link-color="#E95F28" href="https://twitter.com/iosconfsg?ref_src=twsrc%5Etfw">Tweets by iosconfsg</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             <div id="tweets" class="tweets"></div>
         </div>
     </div>
