--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@
 
 <body>
     <div id="preloader" class="preloader">
-        <div class="loader-gplus"></div>
+        <div class="lds-ring"></div>
     </div>
     
     <div id="st-container" class="st-container">
