--- a/_sass/partials/_global.scss
+++ b/_sass/partials/_global.scss
@@ -128,113 +128,44 @@ time {
     left: 0;
     background-color: #fff;
 }
-.loader-gplus {
-    display: inline-block;
-    position: absolute;
-    top: calc(50% - 20px);
-    left: calc(50% - 20px);
-    width: 40px;
-    height: 40px;
-    overflow: hidden;
-    border-radius: 20px;
-    animation: base 3s steps(1) 0s infinite;
-    &::before, &::after {
-        content: ' ';
-        display: block;
-        width: 50%;
-        height: 100%;
-        overflow: hidden;
-        position: absolute;
-        top: 0;
-        left: 50%;
-        z-index: 1;
-        border-radius: 0 20px 20px 0;
-        transform-origin: 0 50%;
-    }
-    &::before {
-        z-index: 2;
-        transform-style: preserve-3d;
-        animation: flip 3s linear 0s infinite;
-    }
-    &::after {
-        animation: reveal 3s steps(1) 0s infinite;
-    }
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
 }
-@keyframes base {
-    0% {
-        transform: rotate(0deg);
-        background-color: #21aa29;
-    }
-    25% {
-        transform: rotate(90deg);
-        background-color: #2159d6;
-    }
-    50% {
-        transform: rotate(180deg);
-        background-color: #d62408;
-    }
-    75% {
-        transform: rotate(270deg);
-        background-color: #ffcf00;
-    }
-    100% {
-        transform: rotate(360deg);
-        background-color: #21aa29;
-    }
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 51px;
+  height: 51px;
+  margin: 6px;
+  border: 6px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
 }
-@keyframes reveal {
-    0% {
-        background-color: #2159d6;
-        transform: rotate(0deg);
-    }
-    25% {
-        background-color: #d62408;
-        transform: rotate(180deg);
-    }
-    50% {
-        background-color: #ffcf00;
-        transform: rotate(0deg);
-    }
-    75% {
-        background-color: #21aa29;
-        transform: rotate(180deg);
-    }
-    100% {
-        background-color: #2159d6;
-        transform: rotate(0deg);
-    }
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
 }
-@keyframes flip {
-    0% {
-        background-color: #21aa29;
-        transform: rotateY(0deg);
-    }
-    12.5%, 87.56% {
-        background-color: #105514;
-    }
-    12.51%, 37.5% {
-        background-color: #102c6b;
-    }
-    25% {
-        background-color: #2159d6;
-    }
-    37.51%, 62.5% {
-        background-color: #6b1204;
-    }
-    50% {
-        background-color: #d62408;
-    }
-    62.51%, 87.5% {
-        background-color: #7f6700;
-    }
-    75%, 78% {
-        background-color: #ffcf00;
-    }
-    100% {
-        background-color: #21aa29;
-        transform: rotateY(-720deg);
-    }
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
 }
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+ 
 .social-links {
     li {
         margin-right: 4px;
