Add details of iOS Conf SG

--- a/_includes/workshop.html
+++ b/_includes/workshop.html
@@ -2,22 +2,25 @@
 <a name="sponsors"></a>
 <section id="workshop" class="partners">
     <div class="content-wrapper">
-        <div class="col-lg-10 col-lg-offset-1">
-            <h3>1 Day - Single Track - 2 Topics</h3>            
-            
-            <div style="float:left;">
+        <div class="col-lg-10 col-lg-offset-1">            
+            <div style="text-align: left;">
+                <h3>1 Day - Single Track - 2 Topics</h3>
+
                 <p>This is the first time we're having a pre-conference workshop at iOS Conf SG. We have selected two topics that are going to be extremely beneficial in building high-class iOS apps.</p><br/>
                 <strong>Speakers for Workshop</strong>
-                <p>We're still finalizing exact details but the sessions will be conducted by 2 overseas iOS Conf speakers.</p>
-                <h4>Topics:</h4>
-
+                <br/><br/>
+                <ul>
+                <li><a href="https://twitter.com/twostraws" target="_blank">Paul Hudson</a> - Creator of Hacking with Swift</li>
+                <li><a href="https://twitter.com/dimsumthinking" target="_blank">Daniel Steinberg</a> - Trainer & Consultant at Dim Sum Thinking</li>
+                </ul>
+                </br>
                 <strong>Morning Session: 9AM - 12:30PM</strong>
                 <h6>Modern iOS App architectures</h6> 
-                <p>Designing reliable iOS apps from scratch.</p>  </br> 
+                <p>Design architecture of complex iOS codebase from scratch. What app architecture pattern you should use for your unique needs and why.</p>  </br> 
                 <strong>Lunch will be served at 12:30 PM</strong>  </br> </br>
                 <strong>Afternoon Session: 1:30PM - 5PM</strong>
-                <h6>Improving App Performance</h6> 
-                <p>Things to consider to improve the performance of your application - starting from improving the compile time to improving app start-up time, from improving the memory footprint of the application to caching. We'll try to cover as much as possible in this short session and possibly point you in the right directions to make your app highly performant and responsive.</p> </br>                   
+                <h6>Functional programming in Swift</h6> 
+                <p>See significant improvements to your product development by developing your existing knowledge of functional programming in Swift and adding a raft of new skills and concepts to your toolbelt.</p> </br>                   
             </div> 
 
             <a href="https://ti.to/iosconfsg/2019" class="btn btn-primary waves-effect waves-button waves-light waves-float" target="_blank">Buy Tickets</a>
