--- a/_includes/location-map.html
+++ b/_includes/location-map.html
@@ -18,7 +18,7 @@
                         </li>
                     </ul>
                 </div>
-                <a href="{{ site.baseurl | append: '/logistics/#find-way' }}" class="pull-right">
+                <a href="https://goo.gl/maps/9NuZx5g5fir" class="pull-right" target="_blank">
                     <svg class="icon icon-direction" viewBox="0 0 32 32">
                         <use xlink:href="{{ site.baseurl }}/img/sprites/sprites.svg#icon-direction"></use>
                     </svg>
