--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -27,12 +27,12 @@ $h5-font-size: 2.3 * $base-font-size;
 $h6-font-size: 1.875 * $base-font-size;
 
 // Colors
-$main-color: #03a9f4;
+$main-color: #F6881F;
 $link-color: $main-color;
 $link-lighten-amount: 20%;
 $base-background-color: #fff;
 $base-section-background-color: $link-color;
-$primary-color: #4285f4;
+$primary-color: #58B73F;
 $primary-color-hover: #3266d5;
 $icon-fill-color: #8b8b8b;
 
