--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -7,13 +7,13 @@ $bold: 500;
 $extra-bold: 600;
 
 // Base Font
-$base-font-family: sans-serif;
+$base-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 $base-font-weight: $regular;
 $base-font-size: 13px;
 $base-line-height: 23px;
 
 // Fixed Font
-$fixed-font-family: 'Roboto';
+$fixed-font-family: 'San Francisco', 'Myriad Pro';
 $fixed-font-size: 85%;
 $fixed-line-height: $base-line-height;
 
