Fix organizing societies typo and update description

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -32,7 +32,7 @@
             {% endif %} {% endfor %}
         </div>
         <div class="col-lg-10 col-lg-offset-1 text-center">
-            <h4 class="text-left animated hiding appear-animation-trigger" data-animation="fadeInUp" data-delay="0">Origanizing Societies</h4>
+            <h4 class="text-left animated hiding appear-animation-trigger" data-animation="fadeInUp" data-delay="0">Organizing Societies</h4>
             <p class="text-left animated hiding" data-animation="fadeInUp" data-delay="0">{{ site.coOrganizers }}</p>
         </div>
     </div>
