--- a/_includes/rockstar-speakers.html
+++ b/_includes/rockstar-speakers.html
@@ -8,7 +8,7 @@
 			<!-- <span class="bordered">
 				<a href="{{ site.baseurl }}/speakers/" class="bottom-section-link waves-effect waves-button waves-light">{{ site.rockstarSpeakersButtonText }}</a>
 			</span> -->
-			<h4>More names to be announced soon...</h4>
+			<h4><a href="/speakers">And many more...</a></h4>
 		</div>
 	</div>
 </section>
