update conference details

--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -1,6 +1,9 @@
 <!-- Begin Schedule Section -->
 <section id="schedule" class="schedule">
     <div class="content-wrapper">
+        <h4><a href="/workshop">Click here</a> for workshop schedule.</h4>
+        </br/>
+
         {% for day in site.data.schedule %}
         <div class="schedule-table col-lg-8 col-md-10 col-md-offset-1">
             <h4 class="schedule-table-heading">{{ day.dateReadable }}</h4>
