--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@ layout: compress
 
 <body>
     <div id="preloader" class="preloader">
-        <div class="lds-ring"></div>
+        <div class="loader-gplus"></div>
     </div>
 
     <div id="st-container" class="st-container disable-scrolling">
