--- a/_sass/partials/_global.scss
+++ b/_sass/partials/_global.scss
@@ -129,43 +129,113 @@ time {
     background-color: #fff;
 }
 
-.lds-ring {
-  display: inline-block;
-  position: relative;
-  width: 64px;
-  height: 64px;
+.loader-gplus {
+    display: inline-block;
+    position: absolute;
+    top: calc(50% - 20px);
+    left: calc(50% - 20px);
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    border-radius: 20px;
+    animation: base 3s steps(1) 0s infinite;
+    &::before, &::after {
+        content: ' ';
+        display: block;
+        width: 50%;
+        height: 100%;
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        z-index: 1;
+        border-radius: 0 20px 20px 0;
+        transform-origin: 0 50%;
+    }
+    &::before {
+        z-index: 2;
+        transform-style: preserve-3d;
+        animation: flip 3s linear 0s infinite;
+    }
+    &::after {
+        animation: reveal 3s steps(1) 0s infinite;
+    }
 }
-.lds-ring div {
-  box-sizing: border-box;
-  display: block;
-  position: absolute;
-  width: 51px;
-  height: 51px;
-  margin: 6px;
-  border: 6px solid #fff;
-  border-radius: 50%;
-  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #fff transparent transparent transparent;
+@keyframes base {
+    0% {
+        transform: rotate(0deg);
+        background-color: #e38049;
+    }
+    25% {
+        transform: rotate(90deg);
+        background-color: #b749e3;
+    }
+    50% {
+        transform: rotate(180deg);
+        background-color: #75e349;
+    }
+    75% {
+        transform: rotate(270deg);
+        background-color: #49a0e3;
+    }
+    100% {
+        transform: rotate(360deg);
+        background-color: #e38049;
+    }
 }
-.lds-ring div:nth-child(1) {
-  animation-delay: -0.45s;
+@keyframes reveal {
+    0% {
+        background-color: #b749e3;
+        transform: rotate(0deg);
+    }
+    25% {
+        background-color: #75e349;
+        transform: rotate(180deg);
+    }
+    50% {
+        background-color: #49a0e3;
+        transform: rotate(0deg);
+    }
+    75% {
+        background-color: #e38049;
+        transform: rotate(180deg);
+    }
+    100% {
+        background-color: #b749e3;
+        transform: rotate(0deg);
+    }
 }
-.lds-ring div:nth-child(2) {
-  animation-delay: -0.3s;
+@keyframes flip {
+    0% {
+        background-color: #e38049;
+        transform: rotateY(0deg);
+    }
+    12.5%, 87.56% {
+        background-color: #105514;
+    }
+    12.51%, 37.5% {
+        background-color: #102c6b;
+    }
+    25% {
+        background-color: #b749e3;
+    }
+    37.51%, 62.5% {
+        background-color: #6b1204;
+    }
+    50% {
+        background-color: #75e349;
+    }
+    62.51%, 87.5% {
+        background-color: #7f6700;
+    }
+    75%, 78% {
+        background-color: #49a0e3;
+    }
+    100% {
+        background-color: #e38049;
+        transform: rotateY(-720deg);
+    }
 }
-.lds-ring div:nth-child(3) {
-  animation-delay: -0.15s;
-}
-@keyframes lds-ring {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
- 
 .social-links {
     li {
         margin-right: 4px;
