Update Workshop Venue

--- a/_includes/venue.html
+++ b/_includes/venue.html
@@ -3,7 +3,14 @@
 <section id="venue">
     <div class="content-wrapper">
         <div class="col-lg-10 col-lg-offset-1">
-            <h3>{{ site.venueBlockTitle }}</h3>
+            <h3>Workshop Venue on 17th Jan</h3>
+            <h4>PlugIn@BLK71</h4>
+            <h5>71 Ayer Rajah Crescent, 02-18, 139951</h5>
+            <h5>Near One-North MRT</h5>
+            <h5><a href="https://goo.gl/maps/mN3keTqp4MK2" target="blank">Direction to the Workshop Venue</a></h5>
+            <br/>
+
+            <h3>{{ site.venueBlockTitle }} on 18th and 19th</h3>
             <div class="row venue-row">
                 <div class="col-md-8 col-sm-8 venue-col">
                     <div class="venue-elem-wrapper">
