--- a/_includes/workshop.html
+++ b/_includes/workshop.html
@@ -4,6 +4,13 @@
         <h4><a href="/schedule">Click here</a> for conference schedule.</h4>
         </br/>
 
+        <h3>Workshop Venue on 17th Jan</h3>
+        <h4>PlugIn@BLK71</h4>
+        <h5>71 Ayer Rajah Crescent, 02-18, 139951</h5>
+        <h5>Near One-North MRT</h5>
+        <h5><a href="https://goo.gl/maps/mN3keTqp4MK2" target="blank">Direction to the Workshop Venue</a></h5>
+        <br/>
+            
         {% for day in site.data.workshop %}
         <div class="schedule-table col-lg-8 col-md-10 col-md-offset-1">
             <h4 class="schedule-table-heading">{{ day.dateReadable }}</h4>
