--- a/_includes/venue.html
+++ b/_includes/venue.html
@@ -3,7 +3,8 @@
 <section id="venue">
     <div class="content-wrapper">
         <div class="col-lg-10 col-lg-offset-1">
-            <h3>Workshop Venue on 17th Jan</h3>
+            <h3>Venue will be announced soon.</h3>
+            <!-- <h3>Workshop Venue on 17th Jan</h3>
             <h4>PlugIn@BLK71</h4>
             <h5>71 Ayer Rajah Crescent, 02-01, 139951</h5>
             <h5>Near One-North MRT</h5>
@@ -36,7 +37,7 @@
                         <div class="venue-elem image-section venue-small-elem venue-img animated hiding" data-animation="fadeIn" data-delay="0" style="background-image: url({{ site.baseurl }}/img/venue/{{ site.venueSmallImage3 }})"></div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
