--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -3,8 +3,8 @@
 <section id="partners" class="partners">
     <div class="content-wrapper">
         <div class="col-lg-10 col-lg-offset-1">            
-            <h3>{{ site.partnersTitle }}</h3>
-            {% for partner in site.data.partners %}
+            <!-- <h3>{{ site.partnersTitle }}</h3> -->
+            <!-- {% for partner in site.data.partners %}
             <h4>{{ partner.group }}</h4>
             <br/>
             <ul class="list-inline">
@@ -16,10 +16,11 @@
                 </li> <br/> <br/>
                 {% endfor %}
             </ul>
-            {% endfor %}           
-            <p>If you'd like to support and engage our iOS community, please take a look at our <a href="{{ site.c4sponsorsUrl | prepend: site.baseurl }}" target="_blank"> Sponsor Kit</a> and <a href="mailto:subh@iosconf.sg">get in touch with us</a> for more information. Thank you!</p> <br/> 
+            {% endfor %}            -->
+            <h5>We are looking for sponsors for iOS Conf SG - 2020.</h5>
+            <p>If you'd like to support and engage our iOS community, kindly <a href="mailto:subh@iosconf.sg">get in touch with us</a> for more information. Thank you!</p> <br/> 
 
-            <a href="{{ site.c4sponsorsUrl | prepend: site.baseurl }}" class="btn btn-primary waves-effect waves-button waves-light waves-float">{{ site.partnersC4sponsorsButton }}</a>
+            <!-- <a href="{{ site.c4sponsorsUrl | prepend: site.baseurl }}" class="btn btn-primary waves-effect waves-button waves-light waves-float">{{ site.partnersC4sponsorsButton }}</a> -->
         </div>
     </div> 
 </section>
