--- a/_includes/rockstar-speakers.html
+++ b/_includes/rockstar-speakers.html
@@ -3,13 +3,12 @@
 	<div class="overlay solid-overlay"></div>
 	<div class="content-wrapper">
 		<div class="col-lg-10 col-lg-offset-1 rockstar-speakers-list">
-			<!-- <h3 id="rockstar-speaker-title">{{ site.rockstarSpeakersTitle }}</h3> -->
+			<h3 id="rockstar-speaker-title">{{ site.rockstarSpeakersTitle }}</h3>
 			<div class="clearfix"></div> 
-			<!-- <span class="bordered">
+			<span class="bordered">
 				<a href="{{ site.baseurl }}/speakers/" class="bottom-section-link waves-effect waves-button waves-light">{{ site.rockstarSpeakersButtonText }}</a>
-			</span> -->
-			<h3>We'll announce the names soon</h3>
-			<h4><a href="/speakers">Check the speakers of 2019</a></h4>
+			</span>
+			<h4>More names to be announced soon</h4>
 		</div>
 	</div>
 </section>
