--- a/_includes/speakers-list.html
+++ b/_includes/speakers-list.html
@@ -49,7 +49,7 @@
                 </div>
                 {% endfor %}
             </div> 
-            <!-- <a href="https://ti.to/iosconfsg/2019" class="btn btn-primary waves-effect waves-button waves-light waves-float" target="_blank">Buy Tickets</a>      -->
+            <a href="https://ti.to/iosconfsg/2020" class="btn btn-primary waves-effect waves-button waves-light waves-float" target="_blank">Buy Tickets</a>     
         </div>
     </div>
 </section>
