--- a/_includes/workshop.html
+++ b/_includes/workshop.html
@@ -1,14 +1,7 @@
 <!-- Begin Partners Section -->
 <section id="schedule" class="schedule">
     <div class="content-wrapper">
-        <h4><a href="/schedule">Click here</a> for conference schedule.</h4>
-        </br/>
-
-        <h3>Workshop Venue on 17th Jan</h3>
-        <h4>PlugIn@BLK71</h4>
-        <h5>71 Ayer Rajah Crescent, 02-01, 139951</h5>
-        <h5>Near One-North MRT</h5>
-        <h5><a href="https://goo.gl/maps/mN3keTqp4MK2" target="blank">Direction to the Workshop Venue</a></h5>
+        <h5>Venue to be announced soon</h5>
         <br/>
             
         {% for day in site.data.workshop %}
