--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -3,8 +3,8 @@
 <section id="partners" class="partners">
     <div class="content-wrapper">
         <div class="col-lg-10 col-lg-offset-1">            
-            <!-- <h3>{{ site.partnersTitle }}</h3> -->
-            <!-- {% for partner in site.data.partners %}
+            <h3>{{ site.partnersTitle }}</h3>
+            {% for partner in site.data.partners %}
             <h4>{{ partner.group }}</h4>
             <br/>
             <ul class="list-inline">
@@ -16,7 +16,7 @@
                 </li> <br/> <br/>
                 {% endfor %}
             </ul>
-            {% endfor %}            -->
+            {% endfor %}           
             <h5>We are looking for sponsors for iOS Conf SG - 2020.</h5>
             <p>If you'd like to support and engage our iOS community, kindly <a href="mailto:subh@iosconf.sg">get in touch with us</a> for more information. Thank you!</p>
 
