Add venue details

--- a/_includes/location-map.html
+++ b/_includes/location-map.html
@@ -4,8 +4,7 @@
     <div class="content-wrapper">
         <div class="col-lg-3 col-md-4 col-sm-6 col-md-offset-1 animated hiding location-description text-left" data-animation="fadeInLeft" data-delay="0">
             <div class="row">
-                <div class="pull-left">
-                    <h3>{{ site.locationBlockTitle }}</h3>
+                <div class="pull-left">                    
                     <ul>
                         {% if site.eventLocationName %}<li>{{ site.eventLocationName }}</li>{% endif %}
                         <li>{{ site.eventStreetAddress }}, {{ site.eventAddressLocality }}</li>
@@ -18,7 +17,7 @@
                         </li>
                     </ul>
                 </div>
-                <a href="https://goo.gl/maps/9NuZx5g5fir" class="pull-right" target="_blank">
+                <a href="https://goo.gl/maps/Bw9oiRRdwoZLG5FC8" class="pull-right" target="_blank">
                     <svg class="icon icon-direction" viewBox="0 0 32 32">
                         <use xlink:href="{{ site.baseurl }}/img/sprites/sprites.svg#icon-direction"></use>
                     </svg>
