--- a/_includes/venue.html
+++ b/_includes/venue.html
@@ -2,16 +2,10 @@
 <a name="venue"></a>
 <section id="venue">
     <div class="content-wrapper">
-        <div class="col-lg-10 col-lg-offset-1">
-            <h3>Venue will be announced soon.</h3>
-            <!-- <h3>Workshop Venue on 17th Jan</h3>
-            <h4>PlugIn@BLK71</h4>
-            <h5>71 Ayer Rajah Crescent, 02-01, 139951</h5>
-            <h5>Near One-North MRT</h5>
-            <h5><a href="https://goo.gl/maps/mN3keTqp4MK2" target="blank">Direction to the Workshop Venue</a></h5>
-            <br/>
-
-            <h3>{{ site.venueBlockTitle }} on 18th and 19th</h3>
+        <div class="col-lg-10 col-lg-offset-1">            
+            <h3>Event {{ site.venueBlockTitle }}</h3>
+            <h4><a href="https://goo.gl/maps/Bw9oiRRdwoZLG5FC8" target="blank">Shaw Foundation Alumni House</a></h4>
+            <br/><br/>
             <div class="row venue-row">
                 <div class="col-md-8 col-sm-8 venue-col">
                     <div class="venue-elem-wrapper">
@@ -37,7 +31,7 @@
                         <div class="venue-elem image-section venue-small-elem venue-img animated hiding" data-animation="fadeIn" data-delay="0" style="background-image: url({{ site.baseurl }}/img/venue/{{ site.venueSmallImage3 }})"></div>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
 </section>
