remove map api calls

--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -13,7 +13,7 @@ $base-font-size: 13px;
 $base-line-height: 23px;
 
 // Fixed Font
-$fixed-font-family: 'San Francisco', 'Myriad Pro';
+$fixed-font-family: 'Muli';
 $fixed-font-size: 85%;
 $fixed-line-height: $base-line-height;
 
