--- a/_includes/top-section.html
+++ b/_includes/top-section.html
@@ -1,3 +1,7 @@
+<script>
+  fbq('track', 'ViewContent');
+</script>
+
 <!-- Begin Top Section -->
 <section id="top-section" class="top-section image-section {% if page.image %}enable-overlay{% endif %}" style="{% if page.image %}background-image: url('{{ site.baseurl }}/img/sections-background/{{ page.image }}');{% elsif page.color %}background: {{ page.color }}{% endif %}">
     <div class="overlay gradient-overlay"></div>
