--- a/_includes/rockstar-speakers.html
+++ b/_includes/rockstar-speakers.html
@@ -4,11 +4,11 @@
 	<div class="content-wrapper">
 		<div class="col-lg-10 col-lg-offset-1 rockstar-speakers-list">
 			<h3 id="rockstar-speaker-title">{{ site.rockstarSpeakersTitle }}</h3>
-			<div class="clearfix"></div> 
+			<div class="clearfix"></div>
+			<h6>Find who else is speaking</h6> 
 			<span class="bordered">
 				<a href="{{ site.baseurl }}/speakers/" class="bottom-section-link waves-effect waves-button waves-light">{{ site.rockstarSpeakersButtonText }}</a>
 			</span>
-			<h4>More names to be announced soon</h4>
 		</div>
 	</div>
 </section>
