--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -17,8 +17,7 @@
                 {% endfor %}
             </ul>
             {% endfor %}           
-            <h5>We are looking for sponsors for iOS Conf SG - 2020.</h5>
-            <p>If you'd like to support and engage our iOS community, kindly <a href="mailto:subh@iosconf.sg">get in touch with us</a> for more information. Thank you!</p>
+            <p>If you'd like to support and engage our iOS community, kindly <a href="mailto:subh@iosconf.sg">get in touch with us</a> for more information. Thank you!</p> <br/> <br/>
 
             <a href="{{ site.c4sponsorsUrl | prepend: site.baseurl }}" class="btn btn-primary waves-effect waves-button waves-light waves-float">{{ site.partnersC4sponsorsButton }}</a>
         </div>
